@@ -43,6 +43,7 @@
  * K3b now chooses default image names based on the project name or the volumeid/cdtext title in case of
    CD/DVD copy.
  * The K3b Project DCOP Interface now uses the QString type for url parameters instead of KURL.
+ * Save/load audio cd track sources in audio projects
 
 0.12
 Added "Mpeg Still" support to Video-CD Project
